// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`valid template matches snapshot on initial render 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-full"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Choose a printing and postage option
          </h1>
          <p
            class="nhsuk-hint"
          >
            We only show options that are available for this letter template. Select one option.
          </p>
          <p>
            <a
              href="https://notify.nhs.uk/pricing-and-commercial/letters"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn about printing and postage (opens in a new tab).
            </a>
          </p>
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="choose-printing-and-postage"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="template-123"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="7"
            />
            <div
              class="nhsuk-form-group"
              id="letterVariantId"
            >
              <table
                class="nhsuk-table-responsive nhsuk-u-margin-bottom-6"
              >
                <thead
                  class="nhsuk-table__head"
                >
                  <tr
                    class="nhsuk-table__row"
                  >
                    <th
                      class="nhsuk-table__header"
                      scope="col"
                    >
                      Select
                    </th>
                    <th
                      class="nhsuk-table__header"
                      scope="col"
                    >
                      Name
                    </th>
                    <th
                      class="nhsuk-table__header"
                      scope="col"
                    >
                      Details
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="nhsuk-table__body"
                >
                  <tr
                    class="nhsuk-table__row"
                  >
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Select 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Select First Class Option
                      </span>
                      <div
                        class="nhsuk-radios__item"
                      >
                        <input
                          aria-labelledby="label-variant-1"
                          checked=""
                          class="nhsuk-radios__input"
                          id="variant-1"
                          name="letterVariantId"
                          type="radio"
                          value="variant-1"
                        />
                        <span
                          class="nhsuk-radios__label"
                        >
                           
                        </span>
                      </div>
                    </td>
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Name 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Name 
                      </span>
                      <label
                        class="nhsuk-label"
                        for="variant-1"
                        id="label-variant-1"
                      >
                        First Class Option
                      </label>
                    </td>
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Details 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Details 
                      </span>
                      <ul
                        class="nhsuk-u-margin-bottom-0"
                      >
                        <li>
                          Sheet size: A4
                        </li>
                        <li>
                          Maximum number of sheets: 4
                        </li>
                        <li>
                          Print on both sides: yes
                        </li>
                        <li>
                          Print colour: colour
                        </li>
                        <li>
                          Envelope size: C4
                        </li>
                        <li>
                          Dispatch time: standard
                        </li>
                        <li>
                          Postage: first class
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr
                    class="nhsuk-table__row"
                  >
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Select 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Select Economy Option
                      </span>
                      <div
                        class="nhsuk-radios__item"
                      >
                        <input
                          aria-labelledby="label-variant-2"
                          class="nhsuk-radios__input"
                          id="variant-2"
                          name="letterVariantId"
                          type="radio"
                          value="variant-2"
                        />
                        <span
                          class="nhsuk-radios__label"
                        >
                           
                        </span>
                      </div>
                    </td>
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Name 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Name 
                      </span>
                      <label
                        class="nhsuk-label"
                        for="variant-2"
                        id="label-variant-2"
                      >
                        Economy Option
                      </label>
                    </td>
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Details 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Details 
                      </span>
                      <ul
                        class="nhsuk-u-margin-bottom-0"
                      >
                        <li>
                          Sheet size: A4
                        </li>
                        <li>
                          Maximum number of sheets: 2
                        </li>
                        <li>
                          Print on both sides: no
                        </li>
                        <li>
                          Print colour: black
                        </li>
                        <li>
                          Envelope size: C5
                        </li>
                        <li>
                          Dispatch time: standard
                        </li>
                        <li>
                          Postage: economy
                        </li>
                      </ul>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="nhsuk-form-group"
            >
              <button
                aria-disabled="false"
                class="nhsuk-button"
                type="submit"
              >
                Save and continue
              </button>
              <a
                class="nhsuk-u-display-inline-block nhsuk-u-font-size-19 nhsuk-u-margin-3"
                href="/preview-letter-template/template-123"
              >
                Go back
              </a>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`valid template renders errors when no variant is selected and error state is returned 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <div
          class="nhsuk-hint"
        >
          You have not chosen a printing and postage option
        </div>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#letterVariantId"
            >
              Choose a printing and postage option
            </a>
          </li>
        </ul>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-full"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Choose a printing and postage option
          </h1>
          <p
            class="nhsuk-hint"
          >
            We only show options that are available for this letter template. Select one option.
          </p>
          <p>
            <a
              href="https://notify.nhs.uk/pricing-and-commercial/letters"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn about printing and postage (opens in a new tab).
            </a>
          </p>
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="choose-printing-and-postage"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="template-123"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="7"
            />
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
              id="letterVariantId"
            >
              <span
                class="nhsuk-error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Choose a printing and postage option
              </span>
              <table
                class="nhsuk-table-responsive nhsuk-u-margin-bottom-6"
              >
                <thead
                  class="nhsuk-table__head"
                >
                  <tr
                    class="nhsuk-table__row"
                  >
                    <th
                      class="nhsuk-table__header"
                      scope="col"
                    >
                      Select
                    </th>
                    <th
                      class="nhsuk-table__header"
                      scope="col"
                    >
                      Name
                    </th>
                    <th
                      class="nhsuk-table__header"
                      scope="col"
                    >
                      Details
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="nhsuk-table__body"
                >
                  <tr
                    class="nhsuk-table__row"
                  >
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Select 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Select First Class Option
                      </span>
                      <div
                        class="nhsuk-radios__item"
                      >
                        <input
                          aria-labelledby="label-variant-1"
                          class="nhsuk-radios__input"
                          id="variant-1"
                          name="letterVariantId"
                          type="radio"
                          value="variant-1"
                        />
                        <span
                          class="nhsuk-radios__label"
                        >
                           
                        </span>
                      </div>
                    </td>
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Name 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Name 
                      </span>
                      <label
                        class="nhsuk-label"
                        for="variant-1"
                        id="label-variant-1"
                      >
                        First Class Option
                      </label>
                    </td>
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Details 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Details 
                      </span>
                      <ul
                        class="nhsuk-u-margin-bottom-0"
                      >
                        <li>
                          Sheet size: A4
                        </li>
                        <li>
                          Maximum number of sheets: 4
                        </li>
                        <li>
                          Print on both sides: yes
                        </li>
                        <li>
                          Print colour: colour
                        </li>
                        <li>
                          Envelope size: C4
                        </li>
                        <li>
                          Dispatch time: standard
                        </li>
                        <li>
                          Postage: first class
                        </li>
                      </ul>
                    </td>
                  </tr>
                  <tr
                    class="nhsuk-table__row"
                  >
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Select 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Select Economy Option
                      </span>
                      <div
                        class="nhsuk-radios__item"
                      >
                        <input
                          aria-labelledby="label-variant-2"
                          class="nhsuk-radios__input"
                          id="variant-2"
                          name="letterVariantId"
                          type="radio"
                          value="variant-2"
                        />
                        <span
                          class="nhsuk-radios__label"
                        >
                           
                        </span>
                      </div>
                    </td>
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Name 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Name 
                      </span>
                      <label
                        class="nhsuk-label"
                        for="variant-2"
                        id="label-variant-2"
                      >
                        Economy Option
                      </label>
                    </td>
                    <td
                      class="nhsuk-table__cell"
                      role="cell"
                    >
                      <span
                        aria-hidden="true"
                        class="nhsuk-table-responsive__heading"
                      >
                        Details 
                      </span>
                      <span
                        class="nhsuk-table-responsive__heading"
                      >
                        Details 
                      </span>
                      <ul
                        class="nhsuk-u-margin-bottom-0"
                      >
                        <li>
                          Sheet size: A4
                        </li>
                        <li>
                          Maximum number of sheets: 2
                        </li>
                        <li>
                          Print on both sides: no
                        </li>
                        <li>
                          Print colour: black
                        </li>
                        <li>
                          Envelope size: C5
                        </li>
                        <li>
                          Dispatch time: standard
                        </li>
                        <li>
                          Postage: economy
                        </li>
                      </ul>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="nhsuk-form-group"
            >
              <button
                aria-disabled="false"
                class="nhsuk-button"
                type="submit"
              >
                Save and continue
              </button>
              <a
                class="nhsuk-u-display-inline-block nhsuk-u-font-size-19 nhsuk-u-margin-3"
                href="/preview-letter-template/template-123"
              >
                Go back
              </a>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
